// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filecoin input it renders attofil correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 72%;
  -ms-flex: 0 0 72%;
  flex: 0 0 72%;
}

.c0 span.info,
.c0 span.error {
  font-size: 0.875rem;
}

.c0 span.error {
  color: var(--red-medium);
}

.c1 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c1 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c1 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c1 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c1 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c1 .unit-wrapper {
  position: relative;
}

.c1 .unit-wrapper input {
  width: 100%;
}

.c1 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
}

<label
  class="c0 c1"
>
  <div>
    <span>
      Enter an amount in Filecoin
    </span>
    <span
      class="info"
    >
      This is how much will be transferred
    </span>
    
  </div>
  <div
    class="button-wrapper"
  >
    <div
      class="unit-wrapper"
    >
      <input
        autocomplete="on"
        class=""
        max=""
        min="0"
        name=""
        placeholder=""
        step="any"
        style="padding-right: 4em;"
        type="number"
        value="100"
      />
      <span
        class="unit"
      >
        aFIL
      </span>
    </div>
  </div>
</label>
`;

exports[`Filecoin input it renders fil correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 72%;
  -ms-flex: 0 0 72%;
  flex: 0 0 72%;
}

.c0 span.info,
.c0 span.error {
  font-size: 0.875rem;
}

.c0 span.error {
  color: var(--red-medium);
}

.c1 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c1 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c1 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c1 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c1 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c1 .unit-wrapper {
  position: relative;
}

.c1 .unit-wrapper input {
  width: 100%;
}

.c1 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
}

<label
  class="c0 c1"
>
  <div>
    <span>
      Enter an amount in Filecoin
    </span>
    <span
      class="info"
    >
      This is how much will be transferred
    </span>
    
  </div>
  <div
    class="button-wrapper"
  >
    <div
      class="unit-wrapper"
    >
      <input
        autocomplete="on"
        class=""
        max=""
        min="0"
        name=""
        placeholder=""
        step="any"
        style="padding-right: 3.25em;"
        type="number"
        value="100"
      />
      <span
        class="unit"
      >
        FIL
      </span>
    </div>
  </div>
</label>
`;

exports[`Filecoin input it renders picofil correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 72%;
  -ms-flex: 0 0 72%;
  flex: 0 0 72%;
}

.c0 span.info,
.c0 span.error {
  font-size: 0.875rem;
}

.c0 span.error {
  color: var(--red-medium);
}

.c1 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c1 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c1 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c1 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c1 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c1 .unit-wrapper {
  position: relative;
}

.c1 .unit-wrapper input {
  width: 100%;
}

.c1 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
}

<label
  class="c0 c1"
>
  <div>
    <span>
      Enter an amount in Filecoin
    </span>
    <span
      class="info"
    >
      This is how much will be transferred
    </span>
    
  </div>
  <div
    class="button-wrapper"
  >
    <div
      class="unit-wrapper"
    >
      <input
        autocomplete="on"
        class=""
        max=""
        min="0"
        name=""
        placeholder=""
        step="any"
        style="padding-right: 4em;"
        type="number"
        value="100"
      />
      <span
        class="unit"
      >
        pFIL
      </span>
    </div>
  </div>
</label>
`;

exports[`Filecoin input it renders the disabled state correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  pointer-events: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 72%;
  -ms-flex: 0 0 72%;
  flex: 0 0 72%;
}

.c0 span.info,
.c0 span.error {
  font-size: 0.875rem;
}

.c0 span.error {
  color: var(--red-medium);
}

.c1 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c1 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c1 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c1 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c1 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c1 .unit-wrapper {
  position: relative;
}

.c1 .unit-wrapper input {
  width: 100%;
}

.c1 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
  color: var(--gray-dark) !important;
}

<label
  class="c0 c1"
  disabled=""
>
  <div>
    <span>
      Enter an amount in Filecoin
    </span>
    <span
      class="info"
    >
      This is how much will be transferred
    </span>
    
  </div>
  <div
    class="button-wrapper"
  >
    <div
      class="unit-wrapper"
    >
      <input
        autocomplete="on"
        class=""
        disabled=""
        max=""
        min="0"
        name=""
        placeholder=""
        step="any"
        style="padding-right: 3.25em;"
        type="number"
        value=""
      />
      <span
        class="unit"
      >
        FIL
      </span>
    </div>
  </div>
</label>
`;

exports[`Filecoin input it renders the value too high state correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 72%;
  -ms-flex: 0 0 72%;
  flex: 0 0 72%;
}

.c0 span.info,
.c0 span.error {
  font-size: 0.875rem;
}

.c0 span.error {
  color: var(--red-medium);
}

.c1 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c1 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c1 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c1 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c1 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c1 .unit-wrapper {
  position: relative;
}

.c1 .unit-wrapper input {
  width: 100%;
}

.c1 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
  color: var(--red-dark) !important;
}

<label
  class="c0 c1"
>
  <div>
    <span>
      Enter an amount in Filecoin
    </span>
    <span
      class="info"
    >
      This is how much will be transferred
    </span>
    <span
      class="error"
    >
      Cannot be more than 10 FIL
    </span>
  </div>
  <div
    class="button-wrapper"
  >
    <div
      class="unit-wrapper"
    >
      <input
        autocomplete="on"
        class="error"
        max="10"
        min="0"
        name=""
        placeholder=""
        step="any"
        style="padding-right: 3.25em;"
        type="number"
        value="100"
      />
      <span
        class="unit"
      >
        FIL
      </span>
    </div>
  </div>
</label>
`;

exports[`Filecoin input it renders the value too low state correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: var(--space-m);
  text-align: left;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c0 > *:first-child {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 > *:last-child:not(.toggle-wrapper) {
  -webkit-flex: 0 0 72%;
  -ms-flex: 0 0 72%;
  flex: 0 0 72%;
}

.c0 span.info,
.c0 span.error {
  font-size: 0.875rem;
}

.c0 span.error {
  color: var(--red-medium);
}

.c1 .button-wrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: var(--space-m);
}

.c1 .button-wrapper > *:first-child {
  -webkit-flex: 1 0 auto;
  -ms-flex: 1 0 auto;
  flex: 1 0 auto;
}

.c1 .button-wrapper > *:not(:first-child) {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-transition: -webkit-transform 0.1s ease-out;
  -webkit-transition: transform 0.1s ease-out;
  transition: transform 0.1s ease-out;
}

.c1 .button-wrapper > *:not(:first-child):hover:not(:active) {
  -webkit-transform: scale(1.2);
  -ms-transform: scale(1.2);
  transform: scale(1.2);
}

.c1 .button-wrapper > *:not(:first-child):active {
  -webkit-transition: none;
  transition: none;
}

.c1 .unit-wrapper {
  position: relative;
}

.c1 .unit-wrapper input {
  width: 100%;
}

.c1 .unit-wrapper .unit {
  position: absolute;
  top: 50%;
  right: 1em;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  color: var(--purple-medium);
  color: var(--red-dark) !important;
}

<label
  class="c0 c1"
>
  <div>
    <span>
      Enter an amount in Filecoin
    </span>
    <span
      class="info"
    >
      This is how much will be transferred
    </span>
    <span
      class="error"
    >
      Cannot be less than 100 FIL
    </span>
  </div>
  <div
    class="button-wrapper"
  >
    <div
      class="unit-wrapper"
    >
      <input
        autocomplete="on"
        class="error"
        max=""
        min="100"
        name=""
        placeholder=""
        step="any"
        style="padding-right: 3.25em;"
        type="number"
        value="10"
      />
      <span
        class="unit"
      >
        FIL
      </span>
    </div>
  </div>
</label>
`;
